tests/type_errors/lambda_wrong_return_type.nos
# expect_error: type mismatch
# Test: lambda returns wrong type

applyToInt(f: Int -> Int, x: Int) = f(x)

main() = applyToInt(x => "not an int", 42)  # Returns String instead of Int
